# SLAM-PBL-ONBOARD

./: .gitignore  README.md
drone/src/drone_package/: package.xml  setup.py
drone/src/drone_package/drone_package/: camera_publisher.py
pc/: README.md
pc/src/pc_package/: package.xml  setup.cfg  setup.py
pc/src/pc_package/pc_package/: screen_subscriber.py
pc/src/salamanca/: CMakeLists.txt  package.xml
pc/src/salamanca/config/: view_bot.rviz
pc/src/salamanca/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
pc/src/salamanca/launch/: display_robot.launch.py  display_robot.launch.xml  launch_sim.launch.py  rsp.launch.py
pc/src/salamanca/meshes/: OSB_18mm_v28.stl  Tattu_6S_22_2V_10000Ah_v4.stl
pc/src/salamanca/stl/: base_link.stl  tattu_battery.stl
pc/src/salamanca/urdf/: mobile_base.urdf.xacro  salamanca.urdf.xacro
ros2_salamanca_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_salamanca_ws/install/rviz_lidar_view/lib/rviz_lidar_view/: rviz_lidar_view
ros2_salamanca_ws/install/rviz_lidar_view/share/rviz_lidar_view/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_salamanca_ws/src/: laser_scan.rviz
ros2_salamanca_ws/src/rviz_lidar_view/: package.xml  setup.cfg  setup.py
ros2_salamanca_ws/src/rviz_lidar_view/rviz_lidar_view/: rviz_lidar_view.py
